# linepulse-oee

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codex-oss-application.md  hello-world.cs  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: adapters.md  data-schema.md  manufacturing-design-principles.md  operator-dashboard.md  pareto-charts.md  reason-codes.md  recommendations.md  roadmap.md  shift-calendars.md  validation.md
examples/: machine_events.csv  machine_events_with_context.csv  reason_codes.json  shift_calendar.json
examples/adapters/: ignition_historian_export.csv  manual_downtime_log.csv  mes_production_log.csv
src/linepulse_oee/: __init__.py  adapters.py  analyze.py  charts.py  cli.py  dashboard.py  model.py  reason_codes.py  shift_calendar.py  validation.py
tests/: test_adapters.py  test_analyze.py  test_charts.py  test_dashboard.py  test_validation.py
